tests/unit/language/errors/reuse_after_move_rejected.arche
// A binding killed by `move` can't be reused as an out-arg — there is no revival. `f(move b)(b)`
// is rejected; bind a fresh one with `f(move b)(b:)`, or fill in place with `f(b)(b)` (in-out,
// no `move`).
// RUN: %arche build -o %t %s > %t.out 2>&1 ; grep -qi "after it was moved" %t.out
fill :: proc(own buf: [8]char)(buf: [8]char, n: int) {
  buf[0] = 65;
  n      = 1;
}

main :: proc() {
  b: [8]char;
  fill(move b)(b, n:);
}